--- a/portstyle.css
+++ b/portstyle.css
@@ -3,8 +3,150 @@
  * Created: Thursday, 24th July 2025 2:48:43 pm
  * Author: Md.Rahad (mdrahad1296@gmail.com)
  * -----
- * Last Modified: Thursday, 24th July 2025 2:48:48 pm
+ * Last Modified: Thursday, 24th July 2025 9:03:51 pm
  * Modified By: Md.Rahad (mdrahad1296@gmail.com)
  * -----
  * Copyright (c) 2025 Islamic University
  */
+.open-sans-normal {
+    font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-variation-settings:
+        "wdth"100;
+}
+/*Shared class which use many times */
+.btn-primary {
+    background-color: rgb(253, 110, 10);
+    color: white;
+    font-weight: bold;
+    padding: 18px 32px;
+    border-radius: 5px;
+    border: none;
+}
+.text-primary{
+    color:rgb(253, 110, 10);
+}
+.dark2{
+    color: #474747;
+}
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: rgb(24, 24, 24);
+}
+.section-description{
+    font-size:18px ;
+    color:rgb(117, 117, 117);
+
+}
+.secondary-bg{
+background-color: rgb(255, 248, 243);
+}
+.text-center{
+    text-align: center;
+}
+
+/*navigation bar work */
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 00px 150px;
+
+}
+.nav-title{
+    font-weight: 800;
+    font-size: 45px;
+}
+.r-color{
+    color:rgb(253, 110, 10);
+}
+nav li{
+    list-style: none;
+    margin-right: 51px;
+}
+nav li a{
+    text-decoration: none;
+    font-size: 20px;
+    color: rgb(71, 71, 71);
+}
+nav ul{
+    display: flex;
+    align-items: center;
+}
+
+/*header image*/
+.header{
+    background-image: url(developer.png),url(header_bg.png);
+    background-repeat: no-repeat;
+    background-position: top left, bottom right;
+    background-color: rgb(255, 248, 243);
+}
+/*banner design*/
+.banner{
+    display: flex;
+    justify-content: space-between;
+}
+.banner-content{
+    max-width: 580px;
+}
+.banner-welcome{
+color: rgb(71, 71, 71);
+font-weight: 400;
+font-size: 45px;
+margin-bottom: 100px;
+line-height: 00px;
+
+}
+.banner-title{
+    font-weight: 600;
+    font-size: 85px;
+    line-height: 00px;
+}
+.banner-description{
+    font-size: 18px;
+}
+/* Main style */
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+/*about style*/
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+}
+.about-items{
+    display: flex;
+    justify-content: space-around;
+}
+.about-item{
+font-size: 18px;
+color: rgb(117, 117, 117);
+}
+.item-description{
+font-weight: bold;
+}
+.bg-wh{
+    background-color: white;
+    border: 1px solid black;
+    width: 827px;
+
+}
+/*skill Section*/
+.skills-container{
+display: flex;
+gap: 24px;
+}
+.skill{
+padding: 30px;
+box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+border-radius: 5px;
+}
+
